# backend-mouredev

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/: .dockerignore  Dockerfile  main.py  products.py  pyproject.toml  users.py
app/db/schemas/: user.py
app/routers/: basic_auth_users.py  jwt_auth_users.py  products.py  users.py  users_db.py
