[tool.poetry]
name = "fastapi-moure"
version = "0.1.0"
description = ""
authors = ["RAJerez <rodrigoagustin23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi = "0.87"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
pymongo = "^4.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
